Update 1-1. 프로그래밍 코드 최적화(02.02).md

--- a/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
@@ -49,3 +49,87 @@ DATA gv_string TYPE string.
 PARAMETERS pa_name TYPE string.
 gv_string = |Hello { pa_name }|.
 ```
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+</br>
+
+### 실습 1
+- 엑셀 업로드 연습
+```abap
+REPORT ZBC400_B03_PRACTICE13.
+
+TYPES: BEGIN OF ts_data,
+        ID(20),
+        NAME(20),
+        AGE(20),
+        ADDRESS(20),
+       END OF ts_data.
+
+
+PARAMETERS: pa_file TYPE localfile.
+DATA: gt_filename TYPE filetable,
+      gv_rc TYPE I,
+      gt_excel_data TYPE TABLE OF alsmex_tabline.
+DATA: gt_data TYPE TABLE OF ts_data,
+      gs_data LIKE LINE OF gt_data.
+FIELD-SYMBOLS: <fs> TYPE ANY.
+CONSTANTS gc_filters TYPE string VALUE 'EXCEL FILES (*.XLSX)|*.XLSX|EXCEL FILES (*.XLS)|*.XLS|'.
+
+AT SELECTION-SCREEN ON VALUE-REQUEST FOR pa_file.
+  cl_gui_frontend_services=>file_open_dialog(
+    EXPORTING
+      window_title            = '파일찾기'                 " Title Of File Open Dialog
+      default_filename        = space                 " Default File Name
+      file_filter             = gc_filters                 " File Extension Filter String
+      initial_directory       = 'C:'                 " Initial Directory
+    CHANGING
+      file_table              = gt_filename                 " Table Holding Selected Files
+      rc                      = gv_rc                 " Return Code, Number of Files or -1 If Error Occurred
+    EXCEPTIONS
+      file_open_dialog_failed = 1                " "Open File" dialog failed
+      cntl_error              = 2                " Control error
+      error_no_gui            = 3                " No GUI available
+      not_supported_by_gui    = 4                " GUI does not support this
+      others                  = 5
+  ).
+  IF SY-SUBRC = 0.
+    READ TABLE gt_filename INTO pa_file INDEX 1.
+  ENDIF.
+
+START-OF-SELECTION.
+  IF pa_file IS NOT INITIAL.
+    CALL FUNCTION 'ALSM_EXCEL_TO_INTERNAL_TABLE'
+      EXPORTING
+        filename                = pa_file
+        i_begin_col             = 2
+        i_begin_row             = 5
+        i_end_col               = 5
+        i_end_row               = 50
+      TABLES
+        intern                  = gt_excel_data
+      EXCEPTIONS
+        inconsistent_parameters = 1
+        upload_ole              = 2
+        others                  = 3.
+    IF SY-SUBRC = 0.
+      SORT gt_excel_data BY row col.
+      LOOP AT gt_excel_data INTO DATA(gs_excel_data).
+        UNASSIGN <fs>.
+        ASSIGN COMPONENT gs_excel_data-col OF STRUCTURE gs_data TO <fs>.
+        <fs> = gs_excel_data-value.
+
+        AT END OF row.
+          APPEND gs_data TO gt_data.
+          CLEAR gs_data.
+        ENDAT.
+      ENDLOOP.
+      cl_demo_output=>display( gt_data ).
+    ENDIF.
+  ENDIF.
+```
