Update 1-1. 프로그래밍 코드 최적화(02.02).md

--- a/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
@@ -54,6 +54,15 @@ gv_string = |Hello { pa_name }|.
 </br>
 </br>
 
+### 4) SET COUNTRY / DATE FORMAT
+- 국가(로케일) 기준에 맞게 날짜·숫자 등의 출력 형식을 설정하는 환경 설정 명령
+```abap
+SET COUNTRY 'US'.
+SET DATE FORMAT 'ENVIRONMENT'.
+```
+</br>
+</br>
+
 ---
 
 </br>
