Update 1-1. 프로그래밍 코드 최적화(02.02).md

--- a/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
@@ -52,6 +52,9 @@ PARAMETERS pa_name TYPE string.
 gv_string = |Hello { pa_name }|.
 ```
 </br>
+
+**< ABAP 문자열 처리(Expression) 함수 목록 >**
+</br>
 </br>
 
 ### 4) SET COUNTRY / DATE FORMAT
