--- a/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
@@ -54,6 +54,38 @@ gv_string = |Hello { pa_name }|.
 </br>
 
 **< ABAP 문자열 처리(Expression) 함수 목록 >**
+
+
+| 구분 | 함수명 | 한줄 설명 |
+|----|-------|---------|
+| 비교 | `distance` | 두 문자열 간의 차이(편집 거리)를 계산 |
+| 공백 | `condense` | 문자열 내 불필요한 공백을 제거 |
+| 결합 | `concat_lines_of` | 내부테이블 여러 줄을 하나의 문자열로 결합 |
+| 변환 | `escape` | 특수문자를 이스케이프 처리 |
+| 검색 | `find` | 문자열에서 특정 문자열 위치 검색 |
+| 검색 | `find_end` | 문자열 끝 기준으로 문자열 검색 |
+| 검색 | `find_any_of` | 지정 문자 집합 중 하나라도 포함된 위치 검색 |
+| 검색 | `find_any_not_of` | 지정 문자 집합에 속하지 않는 문자 위치 검색 |
+| 삽입 | `insert` | 문자열의 특정 위치에 문자열 삽입 |
+| 반복 | `repeat` | 문자열을 지정한 횟수만큼 반복 |
+| 치환 | `replace` | 문자열의 특정 부분을 다른 문자열로 치환 |
+| 변환 | `reverse` | 문자열을 거꾸로 뒤집음 |
+| 추출 | `segment` | 문자열의 특정 구간 추출 |
+| 정렬 | `shift_left` | 문자열을 왼쪽으로 이동 (공백 제거 가능) |
+| 정렬 | `shift_right` | 문자열을 오른쪽으로 이동 |
+| 추출 | `substring` | 문자열의 일부 추출 |
+| 추출 | `substring_from` | 지정 위치부터 끝까지 문자열 추출 |
+| 추출 | `substring_before` | 특정 문자열 이전 부분 추출 |
+| 추출 | `substring_after` | 특정 문자열 이후 부분 추출 |
+| 추출 | `substring_to` | 시작부터 지정 위치까지 문자열 추출 |
+| 대소문자 | `to_upper` | 문자열을 대문자로 변환 |
+| 대소문자 | `to_lower` | 문자열을 소문자로 변환 |
+| 대소문자 | `to_mixed` | 문자열을 혼합 대소문자 형식으로 변환 |
+| 대소문자 | `from_mixed` | 혼합 대소문자를 일반 문자열로 변환 |
+| 변환 | `translate` | 특정 문자들을 다른 문자로 일괄 변환 |
+| 비교 | `matches` | 문자열이 패턴과 일치하는지 확인 |
+| 비교 | `contains` | 문자열에 특정 문자열 포함 여부 확인 |
+
 </br>
 </br>
 
