Update 1-1. 프로그래밍 코드 최적화(02.02).md

--- a/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
@@ -85,6 +85,19 @@ gv_string = |Hello { pa_name }|.
 | 변환 | `translate` | 특정 문자들을 다른 문자로 일괄 변환 |
 | 비교 | `matches` | 문자열이 패턴과 일치하는지 확인 |
 | 비교 | `contains` | 문자열에 특정 문자열 포함 여부 확인 |
+</br>
+
+### 📌 ABAP 문자열 처리 함수 공통 파라미터 (Standard Arguments)
+
+| 파라미터 | 의미 | 설명 |
+|--------|----|----|
+| `val` | 대상 문자열 | 처리할 원본 문자열 |
+| `sub` | 부분 문자열 | 찾거나(replace/find) 치환할 문자열 |
+| `case` | 대소문자 구분 | 대소문자 구분 여부 (`abap_true` / `abap_false`) |
+| `occ` | 발생 횟수 | 몇 번째 발생 위치를 대상으로 할지 지정 |
+| `off` | 오프셋 | 문자열 내 시작 위치 |
+| `len` | 길이 | 처리할 문자열 길이 |
+| `regex` | 정규식 | 찾기·치환·매칭에 사용할 정규 표현식 |
 
 </br>
 </br>
