--- a/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
@@ -53,7 +53,7 @@ gv_string = |Hello { pa_name }|.
 ```
 </br>
 
-### ABAP 문자열 처리(Expression) 함수 목록 
+**ABAP 문자열 처리(Expression) 함수 목록** 
 
 
 | 구분 | 함수명 | 한줄 설명 |
@@ -87,7 +87,7 @@ gv_string = |Hello { pa_name }|.
 | 비교 | `contains` | 문자열에 특정 문자열 포함 여부 확인 |
 </br>
 
-### ABAP 문자열 처리 함수 공통 파라미터 (Standard Arguments)
+**ABAP 문자열 처리 함수 공통 파라미터 (Standard Arguments)**
 
 | 파라미터 | 의미 | 설명 |
 |--------|----|----|
@@ -99,6 +99,7 @@ gv_string = |Hello { pa_name }|.
 | `len` | 길이 | 처리할 문자열 길이 |
 | `regex` | 정규식 | 찾기·치환·매칭에 사용할 정규 표현식 |
 
+</br>
 </br>
 </br>
 
