--- a/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
@@ -116,39 +116,36 @@ SET DATE FORMAT 'ENVIRONMENT'.
 ### 5) ABAP Inline Data Declarations 정리
 - 변수를 미리 선언하지 않고, 사용하는 위치에서 DATA( )로 바로 선언하는 ABAP 최신 문법
 ```abap
-*************** 예외 처리 기존 방식 ****************
-DATA gx_excp TYPE REF TO cx_sy_move_cast_error.
+*************** 예외 처리 ****************
+DATA gx_excp TYPE REF TO cx_sy_move_cast_error.           " 기존 방식
 TRY.
   go_oref2 ?= go_oref1.
 CATCH cx_sy_move_cast_error INTO gx_excp.
 ENDTRY.
 
-*************** 예외 처리 최신 방식 ****************
 TRY.
   go_oref2 ?= go_oref1.
-CATCH cx_sy_move_cast_error INTO DATA(gx_excp).
+CATCH cx_sy_move_cast_error INTO DATA(gx_excp).           " 최신 방식
 ENDTRY.
 
-*************** 내부테이블 + Work Area (LOOP) 기존 방식 ****************
-DATA gs_line TYPE LINE OF gt_itab.
+*************** 내부테이블 + Work Area (LOOP) ****************
+DATA gs_line TYPE LINE OF gt_itab.           " 기존 방식
 LOOP AT gt_itab INTO gs_line.
   " 로직
 ENDLOOP.
 
-*************** 내부테이블 + Work Area (LOOP) 최신 방식 ****************
-LOOP AT gt_itab INTO DATA(gs_line).
+LOOP AT gt_itab INTO DATA(gs_line).           " 최신 방식
   " 로직
 ENDLOOP.
 
-*************** 내부테이블 + Work Area (READ) 기존 방식 ****************
+*************** 내부테이블 + Work Area (READ) ****************
 DATA gs_line TYPE LINE OF gt_itab.
-READ TABLE gt_itab INTO gs_line INDEX n.
+READ TABLE gt_itab INTO gs_line INDEX n.           " 기존 방식
 
-*************** 내부테이블 + Work Area (READ) 최신 방식 ****************
-READ TABLE gt_itab INTO DATA(gs_line) INDEX n.
+READ TABLE gt_itab INTO DATA(gs_line) INDEX n.           " 최신 방식
 
-*************** 메서드 IMPORTING 파라미터 기존 방식 ****************
-DATA go_alv TYPE REF TO cl_salv_table.
+*************** 메서드 IMPORTING 파라미터 ****************
+DATA go_alv TYPE REF TO cl_salv_table.           " 기존 방식
 cl_salv_table=>factory(
   IMPORTING
     r_salv_table = go_alv
@@ -156,31 +153,28 @@ cl_salv_table=>factory(
     t_table      = gt_data
 ).
 
-*************** 메서드 IMPORTING 파라미터 최신 방식 ****************
 cl_salv_table=>factory(
   IMPORTING
-    r_salv_table = DATA(go_alv)
+    r_salv_table = DATA(go_alv)           " 최신 방식
   CHANGING
     t_table      = gt_data
 ).
 
-*************** 필드심볼 LOOP 기존 방식 ****************
-FIELD-SYMBOLS <line> TYPE LINE OF gt_itab.
+*************** 필드심볼 LOOP ****************
+FIELD-SYMBOLS <line> TYPE LINE OF gt_itab.           " 기존 방식
 LOOP AT gt_itab ASSIGNING <line>.
   " 로직
 ENDLOOP.
 
-*************** 필드심볼 LOOP 최신 방식 ****************
-LOOP AT gt_itab ASSIGNING FIELD-SYMBOL(<line>).
+LOOP AT gt_itab ASSIGNING FIELD-SYMBOL(<line>).           " 최신 방식
   " 로직
 ENDLOOP.
 
-*************** 필드심볼 READ 기존 방식 ****************
+*************** 필드심볼 READ ****************
 FIELD-SYMBOLS <line> TYPE LINE OF gt_itab.
-READ TABLE gt_itab ASSIGNING <line> INDEX n.
+READ TABLE gt_itab ASSIGNING <line> INDEX n.           " 기존 방식
 
-*************** 필드심볼 READ 최신 방식 ****************
-READ TABLE gt_itab ASSIGNING FIELD-SYMBOL(<line>) INDEX n.
+READ TABLE gt_itab ASSIGNING FIELD-SYMBOL(<line>) INDEX n.           " 최신 방식
 ```
 </br>
 </br>
