Update 1-1. 프로그래밍 코드 최적화(02.02).md

--- a/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
@@ -115,6 +115,27 @@ SET DATE FORMAT 'ENVIRONMENT'.
 
 ### 5) ABAP Inline Data Declarations 정리
 - 변수를 미리 선언하지 않고, 사용하는 위치에서 DATA( )로 바로 선언하는 ABAP 최신 문법
+- Inline DATA는 “타입을 추론할 수 있는 위치”에서만 가능
+```abap
+*************** INTO 구문 ****************
+LOOP AT gt_itab INTO DATA(gs_line).
+READ TABLE gt_itab INTO DATA(gs_line).
+SELECT * FROM sflight INTO TABLE DATA(gt_tab).
+
+*************** ASSIGNING 구문 ****************
+LOOP AT gt_itab ASSIGNING FIELD-SYMBOL(<fs>).
+READ TABLE gt_itab ASSIGNING FIELD-SYMBOL(<fs>).
+
+*************** 메서드 파라미터 ****************
+CALL METHOD obj->method
+  IMPORTING ev_value = DATA(lv_val).
+
+*************** 예외 처리 ****************
+TRY.
+  " 로직
+CATCH cx_root INTO DATA(lo_exc).
+ENDTRY.
+```
 ```abap
 *************** 예외 처리 ****************
 DATA gx_excp TYPE REF TO cx_sy_move_cast_error.           " 기존 방식
