Update 1-1. 프로그래밍 코드 최적화(02.02).md

--- a/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
@@ -116,7 +116,7 @@ SET DATE FORMAT 'ENVIRONMENT'.
 ### 5) ABAP Inline Data Declarations 정리
 - 변수를 미리 선언하지 않고, 사용하는 위치에서 DATA( )로 바로 선언하는 ABAP 최신 문법
 - Inline DATA는 타입을 추론할 수 있는 위치에서만 가능. 일반 대입문에서는 불가능.
-- IMPORTING, RECEIVING, INTO, CATCH 처럼값을 받는 쪽 에서만 가능
+- `IMPORTING` , `RECEIVING` , `INTO` , `CATCH` 처럼값을 받는 쪽 에서만 가능
 ```abap
 *************** INTO 구문 ****************
 LOOP AT gt_itab INTO DATA(gs_line).
