Update 1-1. 프로그래밍 코드 최적화(02.02).md

--- a/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
@@ -240,6 +240,81 @@ go_alv = NEW cl_gui_alv_grid( i_parent = NEW cl_gui_custom_container( container_
 </br>
 </br>
 
+### 2) CAST( ) / INSTANCE OF / CASE TYPE OF
+- `CAST( )` : 참조 타입을 명시적으로 변환
+- `INSTANCE OF` : 객체가 특정 타입인지 검사
+- `CASE TYPE OF` : 객체 타입에 따라 분기 + 자동 캐스팅
+```abap
+*************** CAST( ) 기존 방식 ****************
+DATA: gt_ddic_fields  TYPE ddfields,
+      go_typedescr    TYPE REF TO cl_abap_typedescr,
+      go_structdescr TYPE REF TO cl_abap_structdescr.
+go_typedescr = cl_abap_typedescr=>describe_by_name( 'SFLIGHT' ).
+go_structdescr ?= go_typedescr.
+gt_ddic_fields = go_structdescr->get_ddic_fields( ).
+
+*************** CAST( ) 최신 방식 ****************
+DATA gt_ddic_fields TYPE ddfields.
+gt_ddic_fields = CAST cl_abap_structdescr(
+    cl_abap_typedescr=>describe_by_name( 'SFLIGHT' )
+  )->get_ddic_fields( ).
+
+*************** INSTANCE OF 기존 방식 ****************
+DATA: go_vehicle TYPE REF TO cl_vehicle,
+      go_truck   TYPE REF TO cl_truck,
+      go_class   TYPE REF TO cl_abap_classdescr.
+CREATE OBJECT go_truck.
+go_vehicle = go_truck.
+go_class ?= cl_abap_typedescr=>describe_by_object_ref( go_vehicle ).
+IF go_class->get_relative_name( ) = 'CL_TRUCK'.
+  go_truck ?= go_vehicle.
+ENDIF.
+
+*************** INSTANCE OF 최신 방식 ****************
+IF go_vehicle IS INSTANCE OF cl_truck.
+  go_truck ?= go_vehicle.
+ENDIF.
+
+*************** CASE TYPE OF ****************
+CASE TYPE OF go_vehicle.
+  WHEN TYPE cl_truck INTO go_truck.
+    " 트럭 처리 로직
+  WHEN TYPE cl_bus INTO go_bus.
+    " 버스 처리 로직
+  WHEN OTHERS.
+    " 기타 타입 처리
+ENDCASE.
+```
+</br>
+</br>
+
+### 3) VALUE( )
+- 여러 필드 값을 한 번에 초기화해서 구조·테이블 값을 생성
+```abap
+*************** 기존 방식 ****************
+DATA: gt_range TYPE RANGE OF sflight-carrid,
+      gs_range LIKE LINE OF gt_range.
+gs_range-sign   = 'I'.
+gs_range-option = 'BT'.
+gs_range-low    = 'AA'.
+gs_range-high   = 'DL'.
+
+APPEND gs_range TO gt_range.
+class=>method( it_range = gt_range ).
+
+
+*************** 최신 방식 (VALUE) ****************
+class=>method( it_range = VALUE #(
+               ( sign   = 'I'
+                 option = 'BT'
+                 low    = 'AA'
+                 high   = 'DL' )
+             )
+).
+```
+</br>
+</br>
+
 ---
 
 </br>
