Update 1-1. 프로그래밍 코드 최적화(02.02).md

--- a/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
@@ -289,7 +289,8 @@ ENDCASE.
 </br>
 
 ### 3) VALUE( )
-- 여러 필드 값을 한 번에 초기화해서 구조·테이블 값을 생성
+- 구조/테이블 값을 즉석에서 만들어 쓰는 문법
+- `BASE` 는 기존 값을 유지한 채 일부 필드만 덮어써서 새 값을 만드는 옵션
 ```abap
 *************** 기존 방식 ****************
 DATA: gt_range TYPE RANGE OF sflight-carrid,
@@ -302,7 +303,6 @@ gs_range-high   = 'DL'.
 APPEND gs_range TO gt_range.
 class=>method( it_range = gt_range ).
 
-
 *************** 최신 방식 (VALUE) ****************
 class=>method( it_range = VALUE #(
                ( sign   = 'I'
@@ -310,6 +310,30 @@ class=>method( it_range = VALUE #(
                  low    = 'AA'
                  high   = 'DL' )
              )
+).
+```
+```abap
+REPORT zprogb03_0041.
+
+TYPES: BEGIN OF ty_data,
+         id(20)   TYPE c,
+         name(20) TYPE c,
+       END OF ty_data.
+DATA: gs_data TYPE ty_data,
+      gt_data TYPE TABLE OF ty_data.
+
+gs_data = VALUE #( id = '001' name = 'KIM' ).
+gs_data = VALUE #( BASE gs_data name = 'Gildong' ).
+
+gt_data = VALUE #(
+  ( id = '001' name = 'KIM' )
+  ( id = '002' name = 'LEE' )
+  ( id = '003' name = 'PARK' )
+).
+
+cl_demo_output=>display(
+  data    = gs_data                 " Text or Data
+  name    = 'Results'                  " Name
 ).
 ```
 </br>
