Update 1-1. 프로그래밍 코드 최적화(02.02).md

--- a/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
@@ -303,14 +303,33 @@ gs_range-high   = 'DL'.
 APPEND gs_range TO gt_range.
 class=>method( it_range = gt_range ).
 
-*************** 최신 방식 (VALUE) ****************
-class=>method( it_range = VALUE #(
+*************** 최신 방식 (VALUE #) ****************
+class=>method(
+  it_range = VALUE #(
                ( sign   = 'I'
                  option = 'BT'
                  low    = 'AA'
                  high   = 'DL' )
              )
 ).
+
+*************** 최신 방식 (VALUE + DATA( )) ****************
+DATA(gt_range) = VALUE RANGE OF sflight-carrid(
+                   ( sign   = 'I'
+                     option = 'BT'
+                     low    = 'AA'
+                     high   = 'DL' )
+                 ).
+class=>method( it_range = gt_range ).
+
+*************** 최신 방식 (VALUE + BASE) ****************
+DATA(gt_range2) = VALUE RANGE OF sflight-carrid(
+                    BASE gt_range
+                    ( sign   = 'I'
+                      option = 'EQ'
+                      low    = 'LH' )
+                  ).
+class=>method( it_range = gt_range2 ).
 ```
 ```abap
 REPORT zprogb03_0041.
@@ -318,22 +337,39 @@ REPORT zprogb03_0041.
 TYPES: BEGIN OF ty_data,
          id(20)   TYPE c,
          name(20) TYPE c,
-       END OF ty_data.
+       END OF ty_data,
+       ty_list TYPE STANDARD TABLE OF ty_data WITH DEFAULT KEY.
 DATA: gs_data TYPE ty_data,
       gt_data TYPE TABLE OF ty_data.
 
+****** 변수 선언과 동시에 값 넣기 (itab 버전)
+* ty_list TYPE STANDARD TABLE OF ty_data WITH DEFAULT KEY.
+* Table type의 경우 위와 같이 형태를 명확하게 지정해야 함
+DATA(gt_list) = VALUE ty_list(
+ ( id = '001' name = 'KIM' )
+ ( id = '002' name = 'LEE' )
+ ( id = '003' name = 'PARK' )
+).
+
+****** Structure 변수에 값 넣기
+*DATA(gs_data) = VALUE ty_data( id = '001' name = 'KIM' ).
 gs_data = VALUE #( id = '001' name = 'KIM' ).
 gs_data = VALUE #( BASE gs_data name = 'Gildong' ).
 
+****** Internal table 변수에 값 넣기
 gt_data = VALUE #(
   ( id = '001' name = 'KIM' )
   ( id = '002' name = 'LEE' )
   ( id = '003' name = 'PARK' )
-).
+ ).
+gt_data = VALUE #( BASE gt_data
+                  ( id = '004' name = 'MOON' )
+                 ).
 
+****** 값 출력
 cl_demo_output=>display(
-  data    = gs_data                 " Text or Data
-  name    = 'Results'                  " Name
+  data    = gt_data
+  name    = 'Results'
 ).
 ```
 </br>
