Update 1-1. 프로그래밍 코드 최적화(02.02).md

--- a/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
@@ -291,6 +291,7 @@ ENDCASE.
 ### 3) VALUE( )
 - 구조/테이블 값을 즉석에서 만들어 쓰는 문법
 - `BASE` 는 기존 값을 유지한 채 일부 필드만 덮어써서 새 값을 만드는 옵션
+- `#` 는 타입이 이미 정의돼 있으면 사용하고, 아니면 타입을 직접 써야 함
 ```abap
 *************** 기존 방식 ****************
 DATA: gt_range TYPE RANGE OF sflight-carrid,
@@ -372,6 +373,19 @@ cl_demo_output=>display(
   name    = 'Results'
 ).
 ```
+</br>
+</br>
+
+### 4) REF( )
+- 데이터 객체의 메모리 참조(주소)를 만들어 반환하는 표현식
+```abap
+*************** 기존 방식 ****************
+GET REFERENCE OF <data_object> INTO <ref_var>.
+
+*************** 최신 방식 (REF) ****************
+<ref_var> = REF #( <data_object> ).
+```
+
 </br>
 </br>
 
