Update 1-1. 프로그래밍 코드 최적화(02.02).md

--- a/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
@@ -378,6 +378,7 @@ cl_demo_output=>display(
 
 ### 4) REF( )
 - 데이터 객체의 메모리 참조(주소)를 만들어 반환하는 표현식
+- `->*` 는 참조 변수가 가리키는 실제 값을 꺼내는 역참조 연산자
 ```abap
 *************** 기존 방식 ****************
 GET REFERENCE OF <data_object> INTO <ref_var>.
@@ -385,7 +386,90 @@ GET REFERENCE OF <data_object> INTO <ref_var>.
 *************** 최신 방식 (REF) ****************
 <ref_var> = REF #( <data_object> ).
 ```
+```abap
+REPORT zprogb03_0041.
 
+DATA: BEGIN OF gs_data,
+        carrid   TYPE s_carr_id,
+        connid   TYPE s_conn_id,
+        fldate   TYPE s_date,
+        carrname TYPE s_carrname,
+      END OF gs_data.
+DATA: ref_all TYPE REF TO data.
+
+gs_data = VALUE #(
+  carrid = 'AA' connid = '17' fldate = '20250101'
+).
+
+" 메모리 주소만 넘겨주기 (REF)
+GET REFERENCE OF gs_data INTO ref_all. " 구문법
+ref_all = REF #( gs_data ). " 신문법
+
+" 이 때, ref_all 안에 들어간 주소의 값이 궁금하다면?
+WRITE: ref_all->*. " 역참조
+
+" 추가) 필드심볼 사용할 수도 있음
+FIELD-SYMBOLS: <fs>.
+ASSIGN ref_all->* TO <fs>. " ref_all 메모리 주소를 동일하게 바라봄
+```
+</br>
+</br>
+
+### 5) CONV( )
+- 값을 원하는 타입으로 명시적으로 변환해서 전달하는 표현식
+```abap
+RESULT = CONV <target_type>( <source_value> ).
+```
+```abap
+REPORT zprogb03_0041.
+
+TYPES ty_str TYPE C LENGTH 2.
+DATA lv_num TYPE I.
+lv_num = 100.
+
+" 유연한 변환
+DATA(lv_str) = CONV ty_str( lv_num ).
+" 엄격한 변환
+DATA(lv_str) = EXACT ty_str( lv_num ).
+
+WRITE: lv_str.
+```
+</br>
+</br>
+
+### 6) EXACT( )
+- EXACT는 타입 변환을 하되, 값이 정확히 맞을 때만 허용하는 엄격한 변환
+- EXACT는 타입 변환보다는 값이 정확한지 체크하는 목적의 표현식
+```abap
+RESULT = EXACT <target_type>( <source_value> ).
+```
+```abap
+REPORT zprogb03_0041.
+
+DATA: gv_connid TYPE s_conn_id.
+gv_connid = 'ABCD'.
+WRITE: gv_connid. "0000 출력 (데이터 소실)
+
+ULINE.
+
+gv_connid = EXACT #( 'ABCD' ). " 데이터 소실이 일어나므로 예외발생
+gv_connid = EXACT #( '1234' ). " 데이터 소실이 없으므로 (숫자->숫자형문자) 변환 + 정상 출력
+WRITE: gv_connid.
+```
+</br>
+</br>
+
+### 7) CORRESPONDING( )
+- 구조가 달라도 필드명이 같은 값만 자동 매핑하는 표현식
+- `MOVE-CORRESPONDING` 과 동일한 동작이지만 중간 변수 없이 바로 사용 가능
+```abap
+*************** 기존 방식 (MOVE-CORRESPONDING) ****************
+MOVE-CORRESPONDING <source_structure> TO <target_structure>.
+RESULT = <target_structure>.
+
+*************** 최신 방식 (CORRESPONDING 표현식) ****************
+RESULT = CORRESPONDING <target_type>( <source_structure> ).
+```
 </br>
 </br>
 
