Update and rename 1-1. 프로그래밍 코드 최적화(02.02).md to 1-2. 프로그래밍 코드 최적화(02.02).md

--- a/RAP/1-2. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-2. 프로그래밍 코드 최적화(02.02).md
@@ -296,10 +296,9 @@ ENDCASE.
 *************** 기존 방식 ****************
 DATA: gt_range TYPE RANGE OF sflight-carrid,
       gs_range LIKE LINE OF gt_range.
-gs_range-sign   = 'I'.
-gs_range-option = 'BT'.
-gs_range-low    = 'AA'.
-gs_range-high   = 'DL'.
+gs_range-sign   = 'E'.   " 제외
+gs_range-option = 'EQ'.  " 같음
+gs_range-low    = 'UA'.
 
 APPEND gs_range TO gt_range.
 class=>method( it_range = gt_range ).
@@ -307,29 +306,27 @@ class=>method( it_range = gt_range ).
 *************** 최신 방식 (VALUE #) ****************
 class=>method(
   it_range = VALUE #(
-               ( sign   = 'I'
-                 option = 'BT'
-                 low    = 'AA'
-                 high   = 'DL' )
-             )
+    ( sign   = 'E'
+      option = 'EQ'
+      low    = 'UA' )
+  )
 ).
 
 *************** 최신 방식 (VALUE + DATA( )) ****************
 DATA(gt_range) = VALUE RANGE OF sflight-carrid(
-                   ( sign   = 'I'
-                     option = 'BT'
-                     low    = 'AA'
-                     high   = 'DL' )
-                 ).
+  ( sign   = 'E'
+    option = 'EQ'
+    low    = 'UA' )
+).
 class=>method( it_range = gt_range ).
 
 *************** 최신 방식 (VALUE + BASE) ****************
 DATA(gt_range2) = VALUE RANGE OF sflight-carrid(
-                    BASE gt_range
-                    ( sign   = 'I'
-                      option = 'EQ'
-                      low    = 'LH' )
-                  ).
+  BASE gt_range
+  ( sign   = 'I'
+    option = 'CP'   " 패턴 매칭
+    low    = 'A*' )
+).
 class=>method( it_range = gt_range2 ).
 ```
 ```abap
@@ -418,6 +415,11 @@ ASSIGN ref_all->* TO <fs>. " ref_all 메모리 주소를 동일하게 바라봄
 ### 5) CONV( )
 - 값을 원하는 타입으로 명시적으로 변환해서 전달하는 표현식
 ```abap
+*************** 기존 형식 (타입 지정 후 대입) ****************
+DATA <result> TYPE <target_type>.
+<result> = <source_value>.
+
+*************** 최신 형식 (CONV 표현식) ****************
 RESULT = CONV <target_type>( <source_value> ).
 ```
 ```abap
@@ -441,6 +443,11 @@ WRITE: lv_str.
 - EXACT는 타입 변환을 하되, 값이 정확히 맞을 때만 허용하는 엄격한 변환
 - EXACT는 타입 변환보다는 값이 정확한지 체크하는 목적의 표현식
 ```abap
+*************** 기존 형식 (타입 변환 + 사전 체크) ****************
+DATA <result> TYPE <target_type>.
+<result> = <source_value>.           " 값 손실 가능성 존재 (에러 없음)
+
+*************** 최신 형식 (EXACT 표현식) ****************
 RESULT = EXACT <target_type>( <source_value> ).
 ```
 ```abap
@@ -462,6 +469,8 @@ WRITE: gv_connid.
 ### 7) CORRESPONDING( )
 - 구조가 달라도 필드명이 같은 값만 자동 매핑하는 표현식
 - `MOVE-CORRESPONDING` 과 동일한 동작이지만 중간 변수 없이 바로 사용 가능
+- `BASE` : 기존 구조의 값을 기본으로 유지하고, 매핑되는 필드만 덮어쓰는 기준값 지정.
+- `EXCEPT` : 매핑 대상에서 제외할 필드 지정
 ```abap
 *************** 기존 방식 (MOVE-CORRESPONDING) ****************
 MOVE-CORRESPONDING <source_structure> TO <target_structure>.
@@ -469,6 +478,87 @@ RESULT = <target_structure>.
 
 *************** 최신 방식 (CORRESPONDING 표현식) ****************
 RESULT = CORRESPONDING <target_type>( <source_structure> ).
+
+*************** 최신 방식 (CORRESPONDING + BASE + EXCEPT) ****************
+RESULT = CORRESPONDING <target_type>(
+  BASE ( <base_structure> )
+  <source_structure>
+  EXCEPT <field1> <field2>
+).
+```
+```abap
+REPORT zprogb03_0041.
+
+DATA: BEGIN OF gs_data,
+        carrid   TYPE s_carr_id,
+        connid   TYPE s_conn_id,
+        fldate   TYPE s_date,
+        carrname TYPE s_carrname,
+      END OF gs_data.
+DATA: gs_carrier TYPE scarr,
+      gs_flight  TYPE sflight.
+
+* 간단 실습 !
+" 신문법을 사용해서, 아래 필드에 값을 넣어주세요
+" gs_carrier 에는 carrid, carrname
+" gs_flight 에는 carrid, connid, fldate
+
+gs_carrier = VALUE #( carrid = 'LH' carrname = 'Airline' ).
+gs_flight = VALUE #( carrid = 'AA' connid = '400' fldate = sy-datum ).
+
+gs_data = CORRESPONDING #( gs_carrier ).
+*gs_data = CORRESPONDING #( gs_flight ). " 기존 데이터 삭제
+*gs_data = CORRESPONDING #( BASE ( gs_data ) gs_flight ). " 기존 데이터 유지
+gs_data = CORRESPONDING #( BASE ( gs_data ) gs_flight EXCEPT carrid ). " carrid 제외 나머지만 적용
+
+WRITE: gs_data-carrid, gs_data-carrname, gs_data-connid, gs_data-fldate.
+```
+</br>
+</br>
+
+### 8) COND( )
+- 조건에 따라 값을 선택해 반환하는 조건 표현식
+- `IF … ELSE` 를 한 줄 표현식으로 대체
+```abap
+*************** 기존 방식 (IF / ELSE) ****************
+DATA gv_kind_label TYPE string.
+IF <condition>.
+  gv_kind_label = <value1>.
+ELSE.
+  gv_kind_label = <value2>.
+ENDIF.
+
+*************** 최신 방식 (COND 표현식) ****************
+RESULT = COND <target_type>(
+  WHEN <condition> THEN <value1>
+  ELSE <value2>
+).
+```
+
+</br>
+</br>
+
+### 9) SWITCH( )
+- 하나의 기준값에 대해 여러 경우를 비교해 값 반환
+- `CASE … WHEN` 의 표현식 버전
+```abap
+*************** 기존 방식 (CASE) ****************
+DATA gv_kind_label TYPE string.
+CASE <value>.
+  WHEN <case1>.
+    gv_kind_label = <value1>.
+  WHEN <case2>.
+    gv_kind_label = <value2>.
+  WHEN OTHERS.
+    gv_kind_label = <default>.
+ENDCASE.
+
+*************** 최신 방식 (SWITCH 표현식) ****************
+RESULT = SWITCH <target_type>( <value>
+  WHEN <case1> THEN <value1>
+  WHEN <case2> THEN <value2>
+  ELSE <default>
+).
 ```
 </br>
 </br>
