--- a/RAP/1-2. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-2. 프로그래밍 코드 최적화(02.02).md
@@ -534,7 +534,35 @@ RESULT = COND <target_type>(
   ELSE <value2>
 ).
 ```
+```abap
+REPORT zprogb03_0041.
 
+DATA: BEGIN OF ls_list,
+        ID(20) TYPE C,
+        name(20) TYPE C,
+      END OF ls_list.
+DATA: lt_list LIKE TABLE OF ls_list.
+DATA: lv_score TYPE I VALUE 88,
+      lv_vip TYPE C VALUE 'X'.
+
+" 점수에 따라 등급을 결정해서 변수에 할당
+DATA(lv_grade) = COND string(
+  WHEN lv_score >= 90 THEN 'A'
+  WHEN lv_score >= 80 THEN 'B'
+  ELSE 'C'
+).
+
+lt_list = VALUE #(
+  BASE lt_list " 기존 데이터 (있다면) 유지
+  ( id = '001' name = 'BASIC' ) " 무조건 추가
+  ( COND #( WHEN lv_vip = 'X' " 조건에 따라 추가
+            THEN VALUE #( id = '101' name = 'VIP' )
+            ELSE VALUE #( id = '102' name = 'BASIC' )
+           )
+  )
+).
+cl_demo_output=>display( lt_list ).
+```
 </br>
 </br>
 
