Update 1-2. 프로그래밍 코드 최적화(02.02).md

--- a/RAP/1-2. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-2. 프로그래밍 코드 최적화(02.02).md
@@ -705,4 +705,40 @@ START-OF-SELECTION.
 </br>
 
 ### 실습 2
-- `VALUE #( )` 으로 바꾸는 실습
+- 기존 코드를 `VALUE #( )` 으로 바꾸는 실습
+```abap
+REPORT zd750aw_03_expr_03.
+
+
+CLASS lcl_flights DEFINITION.
+  PUBLIC SECTION.
+    TYPES: tt_range   TYPE RANGE OF sflight-carrid,
+           tt_flights TYPE STANDARD TABLE OF sflight WITH NON-UNIQUE DEFAULT KEY.
+    CLASS-METHODS get_flights IMPORTING it_range          TYPE tt_range
+                              RETURNING VALUE(rt_flights) TYPE tt_flights.
+ENDCLASS.
+
+CLASS lcl_flights IMPLEMENTATION.
+  METHOD get_flights.
+    SELECT * FROM sflight INTO TABLE rt_flights WHERE carrid IN it_range.
+  ENDMETHOD.
+ENDCLASS.
+
+
+PARAMETERS pa_car TYPE sflight-carrid.
+
+DATA: gt_flights TYPE lcl_flights=>tt_flights,
+      go_alv     TYPE REF TO cl_salv_table.
+
+
+START-OF-SELECTION.
+  gt_flights = lcl_flights=>get_flights( VALUE #( ( sign = 'I' option = 'EQ' low = pa_car ) ) ).
+
+  cl_salv_table=>factory(
+    IMPORTING
+      r_salv_table   = go_alv
+    CHANGING
+      t_table        = gt_flights ).
+
+  go_alv->display( ).
+```
