Update 1-2. 프로그래밍 코드 최적화(02.02).md

--- a/RAP/1-2. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-2. 프로그래밍 코드 최적화(02.02).md
@@ -16,12 +16,13 @@
 ### 1) replace
 - 문자열에서 지정한 부분(sub)을 다른 문자열(with)로 바꾼 새 문자열을 반환하는 문자열 처리 함수
 - 대소문자 구분 여부를 case 옵션으로 제어 가능
+- `to_upper( )` → 문자열을 대문자로 변환
 ```abap
 RESULT = replace(
            val  = <원본문자열>
            sub  = <찾을문자열>
-           case = abap_false   " 대소문자 구분 안 함 (abap_true면 구분)
-           with = <바꿀문자열>
+           case = abap_false        " 대소문자 구분 안 함
+           with = to_upper( <바꿀문자열> )
          ).
 ```
 </br>
