Update 1-2. 프로그래밍 코드 최적화(02.02).md

--- a/RAP/1-2. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-2. 프로그래밍 코드 최적화(02.02).md
@@ -44,6 +44,8 @@ gv_result = gv_var1 && gv_var2.
 
 ### 3) 문자열 템플릿 (String Templates)
 - 문자열 안에 변수나 표현식을 직접 삽입해 새 문자열을 만듦
+- `DATE = USER` → 사용자 로케일 기준 날짜 형식 (예: `2026.02.03`, `02/03/2026` 등)
+- `NUMBER = USER` → 사용자 로케일 기준 숫자 형식 (소수점 / 천 단위 구분 자동)
 ```abap
 *************** 기존 방식 ****************
 DATA gv_string TYPE string.
@@ -53,6 +55,12 @@ gv_string = |Hello World|.
 DATA gv_string TYPE string.
 PARAMETERS pa_name TYPE string.
 gv_string = |Hello { pa_name }|.
+
+*************** 최신 방식 + 날짜 포맷 (user) ****************
+gv_string = |Today is { sy-datum DATE = USER }|.
+
+*************** 최신 방식 + 숫자 포맷 (user) ****************
+gv_string = |PI value: { gc_pi NUMBER = USER }|.
 ```
 </br>
 
