Update 1-3. 프로그래밍 코드 최적화(02.03).md

--- a/RAP/1-3. 프로그래밍 코드 최적화(02.03).md
+++ b/RAP/1-3. 프로그래밍 코드 최적화(02.03).md
@@ -1,3 +1,11 @@
 ## < ABAP Editor Code Completion >
 - `CTRL + Space` :코드 자동완성 호출
 - `Shift + Enter` Or `CTRL + Space + Enter` : 선택한 메서드 템플릿 자동 삽입
+</br>
+
+- `SAPGUI` 로 열기
+<img width="566" height="296" alt="image" src="https://github.com/user-attachments/assets/3dc9a380-bcdf-448c-ba24-8736e7bdfa54" />
+</br>
+
+<img width="499" height="247" alt="image" src="https://github.com/user-attachments/assets/f663c6ad-619f-4f3f-bde2-09d680c4cfad" />
+
