--- a/RAP/1-3. 프로그래밍 코드 최적화(02.03).md
+++ b/RAP/1-3. 프로그래밍 코드 최적화(02.03).md
@@ -8,4 +8,5 @@
 </br>
 </br>
 
+- SAP Fiori(UI5)는 BTP(BAS)에서 개발되고, Cloud Connector를 통해 온프레미스 SAP System과 연결됨
 <img width="410" height="203" alt="image" src="https://github.com/user-attachments/assets/d809a3a8-438c-452e-b517-bd701a8c8160" />
